jquery-mobile.1.3.0.css: Add z-index values for error labels and buttons to fix skip button issues with Firefox ( vpetrov/survana#10 )

--- a/public/css/jquery.mobile.1.3.0.css
+++ b/public/css/jquery.mobile.1.3.0.css
@@ -324,6 +324,7 @@ label:not([for]) {
 .s-error-button.s-skip {
     margin-top:0.15em;
     right:0.1em;
+    z-index:105;
 }
 
 .s-error-label
@@ -331,6 +332,7 @@ label:not([for]) {
     position:absolute;
     right:0.25em;
     font-weight:normal;
+    z-index:90;
 }
 
 .s-error-label-far
